@@ -685,7 +685,7 @@ public class LookupService {
             while (record_buf[record_buf_offset + str_length] != '\0')
                 str_length++;
             if (str_length > 0) {
-                record.region = new String(record_buf, record_buf_offset, str_length+1);
+                record.region = new String(record_buf, record_buf_offset, str_length);
             }
             record_buf_offset += str_length + 1;
             str_length = 0;
@@ -694,18 +694,18 @@ public class LookupService {
             while (record_buf[record_buf_offset + str_length] != '\0')
                 str_length++;
             if (str_length > 0) {
-                record.city = new String(record_buf, record_buf_offset, str_length+1);
+                record.city = new String(record_buf, record_buf_offset, str_length);
             }
-            record_buf_offset += (str_length + 1);
+            record_buf_offset += str_length + 1;
             str_length = 0;
 
             // get postal code
             while (record_buf[record_buf_offset + str_length] != '\0')
                 str_length++;
             if (str_length > 0) {
-                record.postalCode = new String(record_buf, record_buf_offset, str_length+1);
+                record.postalCode = new String(record_buf, record_buf_offset, str_length);
             }
-            record_buf_offset += (str_length + 1);
+            record_buf_offset += str_length + 1;
 
             // get latitude
             for (j = 0; j < 3; j++)
